# Poddklipp

./: .gitignore  PROJEKT_GRANSKNING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: improvements.md  plan.md
sidecar/: pyproject.toml  ruff.toml
sidecar/podklipp_sidecar/: __main__.py  decode.py  match.py  transcribe.py  waveform.py
sidecar/tests/: test_match.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/commands/: analysis.rs  app_config.rs  episodes.rs  export.rs  jingles.rs  mod.rs  segments.rs  settings.rs  storage.rs
src/components/: BatchExportDialog.tsx  EpisodeDetail.tsx  EpisodeList.tsx  ExportDialog.tsx  JingleCaptureDialog.tsx  JingleLibrary.tsx  SegmentKindSettings.tsx  SegmentTable.tsx  SettingsDialog.tsx  Timeline.tsx  TranscriptionToast.tsx
src/components/settings/: AnalysisSection.tsx  BehaviorSection.tsx  ExportSection.tsx  SegmentKindSection.tsx  ShortcutsSection.tsx  StorageSection.tsx
src/hooks/: useAnalysisJobs.ts  useAppConfig.ts  useEpisodes.ts  useJingles.ts  useSegmentKinds.ts
src/lib/: format.ts  shortcuts.ts  tauri.ts
